--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-# PORT=8080 
-# MONGO_URI="mongodb://localhost:27017/appointment_system"
+PORT=8080 
+MONGO_URI="mongodb+srv://bisht:bisht@cluster0.4aqwlru.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+JWT_SECRET="deepak"
